--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.1",
-    "nodemon": "^2.0.18"
+    "netlify-lambda": "^2.0.15",
+    "nodemon": "^2.0.18",
+    "serverless-http": "^3.0.2"
   }
 }
